--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      IMG_BASE: quay.io/sustainable_computing_io
+      IMG_BASE: ghcr.io/ExplorerRay
 
     steps:
       - name: Checkout source
@@ -39,8 +39,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.IMG_BASE }}
-          username: ${{ secrets.BOT_NAME }}
-          password: ${{ secrets.BOT_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: make deps
         shell: bash
@@ -90,19 +90,19 @@ jobs:
           # Currently the binary is built for linux-amd64 only
           tar -czvf bin/kepler-${VERSION}.linux-amd64.tar.gz bin/kepler
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: release-${{ steps.version.outputs.version }}
-          generate_release_notes: true
-          draft: false
-          make_latest: true
-          files: |
-            helm-releases/*.tgz
-            bin/*.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Create GitHub Release
+      #   uses: softprops/action-gh-release@v2
+      #   with:
+      #     tag_name: ${{ github.ref_name }}
+      #     name: release-${{ steps.version.outputs.version }}
+      #     generate_release_notes: true
+      #     draft: false
+      #     make_latest: true
+      #     files: |
+      #       helm-releases/*.tgz
+      #       bin/*.tar.gz
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push Image
         shell: bash
