fix: revise oci repo name

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      IMG_BASE: ghcr.io/ExplorerRay
+      IMG_BASE: ghcr.io/explorerray
 
     steps:
       - name: Checkout source
