--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,7 @@ jobs:
   release:
     permissions:
       contents: write
+      packages: write # needed for ghcr access
 
     runs-on: ubuntu-latest
     env:
