--- a/manifests/k8s/kustomization.yaml
+++ b/manifests/k8s/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - rbac.yaml
   - configmap.yaml
   - daemonset.yaml
+  - networkpolicy.yaml
   - service.yaml
   - servicemonitor.yaml
   - prometheus-rbac.yaml
