--- a/manifests/helm/kepler/values.yaml
+++ b/manifests/helm/kepler/values.yaml
@@ -114,6 +114,14 @@ serviceMonitor:
   labels: {}
   annotations: {}
 
+networkPolicy:
+  enabled: false
+  ingress:
+    - ports:
+        - protocol: TCP
+          port: 28282
+  egress: {}
+
 # Additional labels to add to all resources
 labels: {}
 
